--- a/extensions/dev-plugins/code-generator/src/main/resources/template/Domain2DTOAssembler.java.vm
+++ b/extensions/dev-plugins/code-generator/src/main/resources/template/Domain2DTOAssembler.java.vm
@@ -1,9 +1,12 @@
 package io.ddd.framework.application.application.${moduleName}.${allLowName}.assembler;
 
 import io.ddd.framework.application.common.assembler.Assembler;
+import io.ddd.framework.coreclient.dto.common.page.Page;
 import io.ddd.framework.coreclient.dto.${moduleName}.${allLowName}.${className}DTO;
 import io.ddd.framework.domain.domain.${moduleName}.${className};
 import org.springframework.stereotype.Component;
+
+import java.util.List;
 /**
  * ${comments}
  * @author ${author}
