fix:fix push error

--- a/extensions/dev-plugins/code-generator/src/main/resources/template/DomainController.java.vm
+++ b/extensions/dev-plugins/code-generator/src/main/resources/template/DomainController.java.vm
@@ -20,7 +20,7 @@ import javax.validation.Valid;
  * @date ${datetime}
  */
 @RestController
-@Api(tags = "${comments}模块",description = "包含用户新增/列表/删除")
+@Api(tags = "${comments}模块",description = "包含新增/列表/删除")
 @RequestMapping("${moduleName}/${pathName}")
 public class ${className}Controller extends BasicController {
     @Resource
